--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>Pig Latin Translate</title>
+</head>
+
+<body>
+  <div class= "container">
+    <header class="header">
+      <h1 class="header title"> Pig Latin Translator</h1>
+    </header>
+    <textarea id="textInput" name="text" class="text-input"></textarea>
+    <p class="text-output" id="textOutput"></p>
+  </div>
+  
+  <script src="PigLatin.js"></script>
+
+</body>
+
+</html>
